corrected the file path for css2

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Docplanner Group</title>
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" 
     />
-    <link rel="stylesheet" href="style.css"  />
+    <link rel="stylesheet" href="./style.css"  />
     </head>
 
  <body>
